# Silluzio_mkdocs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
django/: index.html
django/basic_commands/: index.html
docs/: index.md
docs/django/: basic_commands.md
docs/home/: index.md
home/: index.html
search/: search_index.json
